--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,6 +1,6 @@
 {
   "url": "https://stanislav-povolotsky.github.io/ton--tonconnect-demo-dapp-with-react-ui/",
-  "name": "Demo Dapp with React UI",
+  "name": "SP Demo Dapp with React UI",
   "iconUrl": "https://stanislav-povolotsky.github.io/ton--tonconnect-demo-dapp-with-react-ui/apple-touch-icon.png",
   "termsOfUseUrl": "https://stanislav-povolotsky.github.io/ton--tonconnect-demo-dapp-with-react-ui/terms-of-use.txt",
   "privacyPolicyUrl": "https://stanislav-povolotsky.github.io/ton--tonconnect-demo-dapp-with-react-ui/privacy-policy.txt"
